--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,16 @@
 {
-"name":"Trade Feasibility Checker",
-"short_name":"TradeCheck",
-"start_url":".",
-"display":"standalone",
-"background_color":"#000000",
-"theme_color":"#00ff00",
-"icons":[
-{
-"src":"icon.png",
-"sizes":"192x192",
-"type":"image/png"
-}
-]
+  "name": "Trade Feasibility Checker",
+  "short_name": "TradeCheck",
+  "start_url": "/Trade-checkpoints/",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#00ff00",
+  "scope": "/Trade-checkpoints/",
+  "icons": [
+    {
+      "src": "/Trade-checkpoints/icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
 }
